<resources>
  <string name="app_name">Vclone</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="friends">Friends</string>
  <string name="groups">Groups</string>
  <string name="news">News</string>
  <string name="dialogs">Dialogs</string>
  <string name="albums">Albums</string>
  <string name="videos">Videos</string>
  <string name="friend_date_of_birthday">DATE OF BIRTHDAY</string>
  <string name="friend_relation">RELATION</string>
  <string name="friend_country">COUNTRY</string>
  <string name="friend_city">CITY</string>
  <string name="friend_education">EDUCATION</string>
  <string name="friend_university">UNIVERSITY</string>
</resources>
