<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/friends"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnGroups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/groups"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/news"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnDialogs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/dialogs"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnAlbums"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/albums"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnVideos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/videos"
        android:textSize="@dimen/main_button_text_size"
        android:layout_weight="1" />

</LinearLayout>
